# slack_messages

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
slack_hero/: log.py
slack_hero.egg-info/: SOURCES.txt
slack_messages/: log.py  utils.py
slack_messages.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
slack_messages/templates/: error_message.jinja
